-*- text -*-

User visible changes

2010-08-23

  * Obey window coordinates when doing initial mapping if the client
    says the user specified them, for instance with a -geometry.

2010-08-10

  * Mod2-Tab no longer raises a window unless it's necessary for the
    window to be visible.

  * We no longer obey clients trying to map themselves on the current
    workspace when they belong to another workspace. Notably, this
    affects Emacs frames used with emacsclient if server-raise-frame
    is non-nil. The mouse pointer will still be warped, though, but at
    least we stop the window on the other workspace to suddenly move
    to the current workspace.

2010-07-28

  * Now works with unclutter.

2010-07-23

  * Better use of size increments.

2010-07-22

  * When resizing by keyboard we don't warp the pointer along with the
    window if the pointer was outside the window when we started
    resizing.

2010-07-21-2

  * When moving by keyboard, we don't warp the pointer along with the
    window if the pointer was outside the window to begin with.

  * Don't allow moving or resizing of fully maximized windows.

2010-07-21

  * Will react on signals directly instead of waiting for next X event.

  * Raises windows before moving to corner.

2010-07-20

  * Grabbed keypresses that mcwm doesn't know what to do with will be
    sent to the focused window.

  * More bug fixes.

2010-07-19-2

  * Many bug fixes. Including crashing bugs, triggered under Linux.

2010-07-18

  * Move and resize, both with keyboard and mouse, now keeps pointer
    in place within window if it's possible without losing focus.

  * Move window to screen corners with YUBN.

2010-07-10

  * Border colour of fixed windows can be set from command line with
    -x colour.

  * Dies gracefully and maps all windows on all workspaces.

  * Handle unmapped, but inactive, windows when changing workspaces.
    This means that xpdf's and gv's transient windows won't show up